[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/StartScreen/StartScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/QuestionScreen/QuestionScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/CreditsScreen/CreditsScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/MainScene/WelcomeScreen.gd" type="Script" id=5]

[node name="MainScene" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="CreditsScreen" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5

[node name="StartScreen" parent="." instance=ExtResource( 1 )]

[node name="QuestionScreen" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Sound" type="AudioStreamPlayer" parent="."]

[node name="QuipSounds" type="AudioStreamPlayer" parent="."]
